--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Cloudflare Worker
+name: Deploy Cloudflare Workers
 
 on:
   push:
@@ -7,12 +7,21 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-    name: Deploy shorturl worker
-    steps:
-      - uses: actions/checkout@v2
-      - name: Publish
+    name: Deploy Cloudflare Workers
+    runs-on: ubuntu-latest    
+    
+    steps:      
+      - name: Checkout GitHub repo      
+        uses: actions/checkout@v2
+
+      - name: Publish shorturl Worker
         uses: cloudflare/wrangler-action@1.3.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           workingDirectory: 'shorturl'
+      
+      - name: Publish createshorturl Worker
+        uses: cloudflare/wrangler-action@1.3.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          workingDirectory: 'createshorturl'
